--- a/ui.html
+++ b/ui.html
@@ -1,91 +1,174 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
 <head>
-    <title>Buscador de pisos</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+  <meta charset="utf-8">
+  <title>Buscador inmobiliario con IA 🏡</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        .search-box {
-            margin-bottom: 20px;
-        }
-
-        input, button {
-            padding: 8px;
-            font-size: 14px;
-            margin-right: 10px;
-        }
-
-        .card {
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 15px;
-            display: flex;
-            gap: 15px;
-            max-width: 600px;
-        }
-
-        .card img {
-            width: 160px;
-            height: 120px;
-            object-fit: cover;
-            border-radius: 6px;
-        }
-
-        .card h3 {
-            margin: 0;
-            font-size: 18px;
-        }
-
-        .card p {
-            margin: 4px 0;
-        }
-    </style>
+  <style>
+    body {
+      margin: 0;
+      padding: 40px 16px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f5f5f5;
+      color: #111;
+      display: flex;
+      justify-content: center;
+    }
+    .wrap {
+      width: 100%;
+      max-width: 1000px;
+    }
+    h1 {
+      margin-top: 0;
+      margin-bottom: 24px;
+      font-size: 32px;
+    }
+    .search-box {
+      background: #fff;
+      padding: 24px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.06);
+      margin-bottom: 24px;
+    }
+    textarea {
+      width: 100%;
+      min-height: 70px;
+      max-height: 260px;
+      padding: 18px 22px;
+      border-radius: 999px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+      resize: vertical;
+      outline: none;
+      box-sizing: border-box;
+    }
+    textarea:focus {
+      border-color: #006CFF;
+      box-shadow: 0 0 0 2px rgba(0,108,255,0.2);
+    }
+    .actions {
+      margin-top: 16px;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      flex-wrap: wrap;
+    }
+    button {
+      background: #006CFF;
+      color: #fff;
+      border: none;
+      border-radius: 999px;
+      padding: 12px 28px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    button:hover {
+      opacity: 0.92;
+    }
+    /* Noria "Buscando" */
+    #spinner {
+      display: none;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+      color: #444;
+    }
+    .loader {
+      width: 22px;
+      height: 22px;
+      border-radius: 50%;
+      border: 3px solid #eee;
+      border-top-color: #006CFF;
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+    #output {
+      margin-top: 24px;
+      background: #fff;
+      border-radius: 16px;
+      padding: 18px 20px;
+      min-height: 120px;
+      white-space: pre-wrap;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 14px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+      overflow-y: auto;
+      max-height: 70vh;
+    }
+  </style>
 </head>
 <body>
+  <div class="wrap">
+    <h1>Buscador inmobiliario con IA 🏡</h1>
 
-<h2>Buscador de pisos</h2>
+    <div class="search-box">
+      <textarea id="q" placeholder="Escribe cualquier búsqueda inmobiliaria…"></textarea>
+      <div class="actions">
+        <button id="btn">Buscar</button>
+        <div id="spinner">
+          <div class="loader"></div>
+          <span>Buscando…</span>
+        </div>
+      </div>
+    </div>
 
-<div class="search-box">
-    Ciudad: <input id="ciudad" value="barcelona">
-    Precio máx: <input id="precio" value="500000">
-    <button onclick="buscar()">Buscar</button>
-</div>
+    <div id="output">Resultados aparecerán aquí…</div>
+  </div>
 
-<div id="resultados"></div>
+  <!-- JS inline para evitar problemas con main.js 404 -->
+  <script>
+    console.log("JS inline cargado correctamente");
 
-<script>
-async function buscar() {
-    const ciudad = document.getElementById("ciudad").value;
-    const precio = document.getElementById("precio").value;
+    const input   = document.getElementById("q");
+    const button  = document.getElementById("btn");
+    const output  = document.getElementById("output");
+    const spinner = document.getElementById("spinner");
 
-    const res = await fetch(`/buscar?ciudad=${ciudad}&precio_max=${precio}`);
-    const data = await res.json();
+    function setSpinner(visible) {
+      spinner.style.display = visible ? "flex" : "none";
+    }
 
-    const cont = document.getElementById("resultados");
-    cont.innerHTML = ""; // limpiar
+    function setOutput(text) {
+      output.textContent = text;
+      output.scrollTop = output.scrollHeight;
+    }
 
-    data.pisos.forEach(p => {
-        const div = document.createElement("div");
-        div.className = "card";
+    button.addEventListener("click", async () => {
+      const q = (input.value || "").trim();
+      if (!q) {
+        setOutput("Escribe una consulta primero.");
+        return;
+      }
 
-        div.innerHTML = `
-            <img src="${p.thumbnail || ''}">
-            <div>
-                <h3>${p.priceInfo.price.amount.toLocaleString()} €</h3>
-                <p><strong>${p.propertyType || ''}</strong> — ${p.size || 0} m² — ${p.rooms || 0} hab</p>
-                <p>${p.address || ''}</p>
-                <a href="${p.url}" target="_blank">Ver en Idealista</a>
-            </div>
-        `;
+      setOutput("");
+      setSpinner(true);
 
-        cont.appendChild(div);
+      const url = "/buscar?q=" + encodeURIComponent(q);
+      console.log("Llamando a:", url);
+
+      try {
+        const res = await fetch(url);
+        console.log("Status respuesta:", res.status);
+
+        if (!res.ok) {
+          const errText = await res.text();
+          setOutput("❌ Error HTTP " + res.status + "\\n\\n" + errText);
+          return;
+        }
+
+        const text = await res.text();
+        setOutput(text || "⚠️ La API no devolvió contenido.");
+      } catch (e) {
+        console.error("Error llamando a /buscar:", e);
+        setOutput("❌ Error llamando al servidor:\\n" + String(e));
+      } finally {
+        setSpinner(false);
+      }
     });
-}
-</script>
-
+  </script>
 </body>
 </html>
